modal scrollbar bug fix css

--- a/app/assets/stylesheets/adl/work.scss
+++ b/app/assets/stylesheets/adl/work.scss
@@ -62,5 +62,9 @@
   }
 }
 
+body.modal-open .workNavbarFixContainer, body.modal-open .workHeaderFixContainer, body.modal-open #header-navbar{
+  right: 15px!important;
+}
+
 
 
